# nt2

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  CTestConfig.cmake  README  README.rst  benchmarks.project  build.project  cmake.project  documentation.project  examples.project  library.project  main.cpp  nt2.sublime-project  nt2.workspace  quick_test.project  sandbox.project  unit.project  valgrind.supp  version.hpp.in
cmake/profiler/: CMakeLists.txt  filter.cpp  postprocess.cpp  preprocess.pl  profiler.cmake  template_profiler.hpp
demo/: CMakeLists.txt
demo/blackscholes/: CMakeLists.txt  blackscholes.cpp
demo/blackscholes/nt2/: CMakeLists.txt  blackandscholes_nt2.cpp
demo/blackscholes/nt2_merged/: CMakeLists.txt  blackandscholes_nt2_merged.cpp
demo/blackscholes/scalar/: CMakeLists.txt  blackandscholes_scalar.cpp
demo/blackscholes/simd/: CMakeLists.txt  blackandscholes_simd.cpp
demo/helloworld/: CMakeLists.txt  helloworld.cpp
demo/helloworld/nt2/: CMakeLists.txt  helloworld_nt2.cpp
demo/helloworld/simd/: CMakeLists.txt  helloworld.cpp  helloworld_simd.cpp
demo/mandelbrot/include/: utils.hpp
demo/mandelbrot/nt2/: CMakeLists.txt  mandelbrot_nt2.cpp
demo/mandelbrot/scalar/: CMakeLists.txt  mandelbrot_scalar.cpp
demo/mandelbrot/simd/: CMakeLists.txt  mandelbrot_simd.cpp
demo/planebit/scalar/: CMakeLists.txt  planebit_scalar.cpp
demo/planebit/simd/: CMakeLists.txt  planebit_simd.cpp
demo/rgb2grey/nt2/: CMakeLists.txt  rgb2grey_nt2.cpp
demo/rgb2grey/scalar/: CMakeLists.txt  rgb2grey_scalar.cpp
demo/rgb2grey/simd/: CMakeLists.txt  rgb2grey_simd.cpp
demo/rgb2yuv/nt2/: CMakeLists.txt  rgb2yuv_nt2.cpp
demo/rgb2yuv/scalar/: CMakeLists.txt  rgb2yuv_scalar.cpp
demo/rgb2yuv/simd/: CMakeLists.txt  rgb2yuv_simd.cpp
demo/saxpy/mkl/: CMakeLists.txt  saxpy_mkl.cpp
demo/saxpy/nt2/: CMakeLists.txt  saxpy_nt2.cpp
demo/saxpy/scalar/: CMakeLists.txt  saxpy_scalar.cpp
demo/saxpy/simd/: CMakeLists.txt  saxpy_simd.cpp
demo/sdot/mkl/: CMakeLists.txt  sdot_mkl.cpp
demo/sdot/nt2/: CMakeLists.txt  sdot_nt2.cpp
demo/sdot/scalar/: CMakeLists.txt  sdot_scalar.cpp
demo/sdot/simd/: CMakeLists.txt  sdot_simd.cpp
demo/sigmadelta/nt2/: CMakeLists.txt  sigmadelta_nt2.cpp
demo/sigmadelta/scalar/: CMakeLists.txt  sigmadelta_scalar.cpp
demo/sigmadelta/simd/: CMakeLists.txt  sigmadelta_simd.cpp
examples/: CMakeLists.txt
examples/core/timing/: CMakeLists.txt  cycle_timer.cpp  second_timer.cpp
examples/sdk/: local.hpp
examples/sdk/config/: CMakeLists.txt  architecture.cpp  status.cpp
examples/sdk/details/: CMakeLists.txt  assertion_failed.cpp  ignore_unused.cpp  pp_enum_shifted_value.cpp  pp_include.cpp  type_id.cpp
examples/sdk/functor/: CMakeLists.txt  belong_to.cpp  dominant.cpp  validate.cpp
examples/sdk/memory/: CMakeLists.txt  align_on.cpp  is_aligned.cpp  meta_align_on.cpp  meta_is_aligned_c.cpp
examples/sdk/meta/: CMakeLists.txt  any.cpp  as_integer.cpp  as_real.cpp  as_signed.cpp  as_unsigned.cpp  downgrade.cpp  enable_if_type.cpp  has_key.cpp  is_signed.cpp  make_integer.cpp  sign_of.cpp  strip.cpp  upgrade.cpp
examples/sdk/sys/: CMakeLists.txt  string.cpp  timestamp.cpp
modules/arithmetic/: CMakeLists.txt
modules/arithmetic/bench/: CMakeLists.txt
modules/arithmetic/cmake/: nt2.arithmetic.dependencies.cmake  simd_fwd.py
modules/arithmetic/cover/: CMakeLists.txt
modules/arithmetic/doc/: abs.py  abss.py  amul.py  arg.py  average.py  ceil.py  correct_fma.py  dist.py  divceil.py  divfix.py  divfloor.py  divround.py  divs.py  fam.py  fast_hypot.py  fast_toint.py  floor.py  fma.py  hypot.py  iceil.py  idivceil.py  idivfix.py  idivfloor.py  idivround.py  ifloor.py  iround.py  iround2even.py  isqrt.py  ldiv.py  ldivide.py  logical_xor.py  madd.py  max.py  min.py  minmod.py  minusone.py  mod.py  muls.py  negs.py  oneminus.py  (+15 more)
modules/arithmetic/doc2/: toint.py
modules/arithmetic/exhaustive/: CMakeLists.txt
modules/arithmetic/script/: abss.py  ceil.py  correct_fma.py  dist.py  divceil.py  divfix.py  divfloor.py  fast_toint.py  fma.py  iceil.py  idivceil.py  idivfloor.py  idivround.py  ifloor.py  iround.py  iround2even.py  ldivide.py  mod.py  oneplus.py  random.py  rdivide.py  rec.py  rem.py  remainder.py  remquo.py  sqr.py  sqrt.py  tofloat.py  trunc.py  two_prod.py  two_split.py
modules/arithmetic/src/: CMakeLists.txt
modules/arithmetic/unit/: CMakeLists.txt
modules/bessel/cover/: CMakeLists.txt
modules/bessel/unit/: CMakeLists.txt
modules/boost_math/bench/: CMakeLists.txt
modules/cephes/: CMakeLists.txt
modules/cephes/bench/: CMakeLists.txt
modules/cephes/cmake/: nt2.cephes.dependencies.cmake
modules/cephes/cover/: CMakeLists.txt
modules/cephes/doc/: acos.py  bdtr.py  beta.py  cbrt.py  ceil.py  chdtr.py  cosh.py  dawsn.py  ellie.py  ellpk.py  expx2.py  fdtri.py  gamma.py  i0.py  i0e.py  igami.py  incbet.py  incbps.py  iv.py  jn.py  jv.py  log10.py  pdtr.py  pdtri.py  rgamma.py  spence.py  y0.py  y1.py  yn.py  yv.py  zeta.py
modules/cephes/script/: acosh.py  asinh.py  atan.py  atan2.py  atanh.py  cos.py  cosdg.py  cot.py  ellik.py  exp10.py  exp2.py  fdtr.py  floor.py  gdtr.py  gdtrc.py  hyp2f1.py  hyperg.py  i1.py  i1e.py  igamc.py  j0.py  j1.py  jn.py  k0.py  k0e.py  k1.py  k1e.py  kn.py  log.py  nbdtri.py  ndtr.py  pdtrc.py  powi.py  psi.py  sindg.py  sinh.py  sqrt.py  tandg.py  zetac.py
modules/cephes/src/: CMakeLists.txt
modules/sdk/: CMakeLists.txt  dependencies.cmake
profile/: CMakeLists.txt  minimal_table.cpp  scalar_functor.cpp
sandbox/: CMakeLists.txt  external_dispatch.cpp  foo.cpp  functor.cpp  functor3.cpp  index_test.cpp  is_eq.cpp  map.cpp  nan.cpp  pack.cpp  rec_block.cpp  simd_detection.cpp  simd_range.cpp  table.cpp  table_dim.cpp  transform_pass.cpp
tools/gather_includes/: CMakeLists.txt  gather_includes.cpp
tools/is_multicore/: CMakeLists.txt  is_multicore.cpp
tools/is_supported/: CMakeLists.txt  is_supported.cpp
tools/postconfigure/: CMakeLists.txt  postconfigure.cpp
tools/x86_model/: CMakeLists.txt  x86_model.cpp
unit/: .gitignore  CMakeLists.txt
(+59870 files in other folders)
